--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,13 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-
 build/
+cmake-build*/
+
 *~
 .DS_Store
 
-# KDevelop
+# IDEs
 .kdev4
+.vscode
+.idea
